# redis-parser

./: Cargo.toml  README.md
.github/workflows/: test.yml
benches/: parsing_speed.rs  resp2_data.txt
examples/: print.rs
src/: lib.rs  resp2.rs  resp3.rs  utils.rs
