[package]
name = "redis-protocol-parser"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
repository = "https://github.com/orf/redis-protocol-parser"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
num-bigint = "0.3.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parsing_speed"
harness = false