[package]
name = "redis-parser"
version = "0.1.1"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
repository = "https://github.com/orf/redis-protocol-parser"
license = "MIT"
description = "A zero-copy parser for the RESP2 and RESP3 protocols, used by Redis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
num-bigint = "0.3.1"

[dev-dependencies]
criterion = "0.3"
structopt = "0.3.20"
clap = "2.33.3"

[[bench]]
name = "parsing_speed"
harness = false
